# LLM-RAG

./: .dockerignore  BACKEND_PROJECT_REPORT.md  Dockerfile  Dockerfile.worker  Makefile  RAG_IMPLEMENTATION_GUIDE.md  README.md  app.py  config.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  cache.py  chat.py
app/core/: auth.py  config.py
app/db/: dependencies.py  processing_status.py  repository.py
app/prompts/: __init__.py  student_handbook.py
app/routers/: documents.py  rag.py
app/schemas/: documents.py  rag.py  task_schemas.py
app/services/: reranker.py
app/services/chat/: session.py  (+1 more)
app/training/: qna.json
app/workers/: celery_app.py
frontend/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.tsx  vite-env.d.ts
models/: optimized_multihop_rag.json  optimized_rag.json
scripts/: cache_all_documents.py  compare_structure.py  convert_docx_to_pdf.py  create_admin.py  inspect_content.py  process_all_regulations.py  process_pdp8.py  query_rag.py  reset_circuit_breakers.py  reset_circuit_breakers_simple.py  sample_unique.py  start_all_workers.sh  start_embedding_workers.sh  start_worker.sh  test_retrieval.py  test_streaming_time.py  test_unique_content.py  train_multihop_rag.py  train_rag.py  upload_all_pdfs.py
supabase/: config.toml
supabase/migrations/: 20251117083440_create_documents_table.sql  20251117085110_add_rls_policies.sql  (+7 more)
tests/: test_celery_workflow.py  test_pdf_processing.py  test_retrieval.py
(+50 files in other folders)
